# get_wechat_stickers

./: Cargo.toml  README.md
src/: main.rs
