[package]
name = "get_wechat_stickers"
version = "0.0.1"
edition = "2021"
authors = ["人渣29"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.2"
hex = {version = "0.4.2"}
xml-rs = "0.8"
anyhow = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.5.0"
